fix issue with plural error label and 1px of alignment

--- a/src/components/common/resultsTable.less
+++ b/src/components/common/resultsTable.less
@@ -248,11 +248,13 @@ tr.tr-no-border>td {
 
 .error-span-count {
   display: inline-block !important; // to override bootstrap
-  margin-right: @spacing-xs ;
+  margin-right: @spacing-xs;
   font-weight: 600 !important; // to override bootstrap
   font-size: @font-size-base !important; // to override bootstrap
   color: @brand-danger !important;
   background-color: #fbe7f1;
+  position: relative;
+  top: -1px;
 }
 
 // overriding header styles
